--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,8 +24,22 @@
     --bg: var(--gray-1);
     --boxBg: var(--gray-4);
   }
-  html {
-    /* -webkit-scrollbar: none; */
-    /* overflow-y: hidden; */
+}
+
+.overflow-x-scroll.snap-x::-webkit-scrollbar {
+  display: none; /* hide scrollbars with webkit scrollbar */
+}
+
+@media (hover: hover) {
+  .animated-list:hover li {
+    opacity: 0.5;
   }
+
+  .animated-list:hover li:hover {
+    opacity: 1;
+  }
+}
+
+.animate-in {
+  animation-delay: calc(var(--index) * 130ms);
 }
